fix(API): improve user search logic and performance
